# HTTPSimple-Net2021

./: CMakeLists.txt  README.md  main.cc
example/: controllers.hpp  noimg.html  test.txt
include/: HTTPSimple.hpp  HttpRequest.hpp  HttpResponse.hpp  Logger.hpp  TaskQueue.hpp  ThreadPool.hpp  ThreadSafeQueue.hpp  XForm.hpp
src/: HttpRequest.cc  HttpResponse.cc  Router.cc  Server.cc
