cmake_minimum_required(VERSION 3.22)

PROJECT(HTTPSimple)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Og -D_DEBUG")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3")

INCLUDE_DIRECTORIES(include)

AUX_SOURCE_DIRECTORY(./src src_files)

SET(SOURCES main.cc ${src_files})

ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCES})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} pthread)
